--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "gulpfile.js",
   "type": "module",
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "magnific-popup": "^1.1.0",
+    "swiper": "^8.0.6",
+    "vanilla-tilt": "^1.7.2"
   },
   "devDependencies": {
     "browser-sync": "^2.27.7",
