--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "gulpfile.js",
   "type": "module",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "jquery": "^3.6.0",
     "magnific-popup": "^1.1.0",
     "swiper": "^8.0.6",
-    "vanilla-tilt": "^1.7.2"
+    "vanilla-tilt": "^1.7.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "browser-sync": "^2.27.7",
