--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.6.0",
     "magnific-popup": "^1.1.0",
     "swiper": "^8.0.6",
+    "translater.js": "^1.0.12",
     "vanilla-tilt": "^1.7.2",
     "wowjs": "^1.1.3"
   },
